# VanadiumCast

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.333c198  Commands.h  DeviceListModel.qml  Documentation.md  Documentation.tex  Literature.md  PageDevices.qml  PageMedia.qml  PageSink.qml  PageStreaming.qml  QMake.old.pro  README.md  Sources.html  Sources.md  Sources.tex  VanadiumCast.pro  VanadiumCast_en_DE.ts  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
API/: API.h  NetworkAPI.cpp  NetworkAPI.h  SinkHandleWidget.h
GUI/: VideoGui.cpp  VideoGui.h  VideoGuiLauncher.cpp  VideoGuiLauncher.h
MediaProcessing/: AudioDecode.h  AudioDecoder.h  AudioEncode.h  AudioEncoder.cpp  Codec.h  Decoder.h  Demuxer.cpp  Demuxer.h  Encoder.h  EncodingProfile.h  InputFile.cpp  InputFile.h  NetworkInput.cpp  NetworkInput.h  VideoDecode.h  VideoEncode.h  VideoTranscoder.cpp  VideoTranscoder.h
Networking/: Device.h  DeviceDirectory.h  DeviceScan.h  NetworkDevice.cpp  NetworkDevice.h  NetworkDeviceDirectory.cpp  NetworkDeviceDirectory.h  NetworkDeviceScanner.cpp  NetworkDeviceScanner.h  NetworkSinkHandler.cpp  NetworkSinkHandler.h  NetworkSinkTcpServer.cpp  NetworkSinkTcpServer.h  NetworkStreamer.cpp  NetworkStreamer.h  SinkHandler.h  StreamInitThread.cpp  StreamInitThread.h  Streaming.h
VanadiumCast/: CMakeLists.txt  VanadiumCast.pro
VanadiumCast/res/: resources.qrc
VanadiumCast/res/gui/: main.qml
VanadiumCast/res/gui/fragments/: PageDevices.qml  PageMedia.qml  PageStreaming.qml
VanadiumCast/src/: main.cpp
backend/: CMakeLists.txt  backend.pro
backend/src/: Commands.h  global.h  util.cpp
backend/src/API/: API.h  NetworkAPI.cpp  NetworkAPI.h
backend/src/GUI/: VideoGui.cpp  VideoGui.h  VideoGuiLauncher.cpp  VideoGuiLauncher.h  WindowCloseEventFilter.cpp
backend/src/MediaProcessing/: CachedLocalStream.cpp  CachedLocalStream.h  FFMPEGTranscoder.h  Input.h  InputFile.h  OGLUtil.cpp  OGLUtil.h  PlayerStateSlots.h  ScreenRecorder.cpp  ScreenRecorder.h  VideoTranscoder.cpp  VideoTranscoder.h
backend/src/Networking/: NetworkDevice.cpp  NetworkDevice.h  NetworkDeviceDirectory.cpp  NetworkDeviceDirectory.h  NetworkSinkHandler.cpp  NetworkSinkHandler.h  StreamThread.cpp  StreamThread.h
doc/: Components.pdf_tex  Documentation.tex  Flowchart.pdf_tex  Literature.md  NetworkProtocol.dia  Sources.html  Sources.md  Unterschrift.tex
res/: PageDevices.qml  PageMedia.qml  PageStreaming.qml  main.qml  qml.qrc  qtquickcontrols2.conf
res/gui/: PageMedia.qml  PageStreaming.qml  main.qml
res/gui/fragments/: PageDevices.qml  PageMedia.qml  PageStreaming.qml
res/gui/fragments/model/: DeviceListModel.qml
res/gui/model/: DeviceListModel.qml
src/: CMakeLists.txt  Commands.h  main.cpp  util.cpp  util.h
src/API/: API.h  NetworkAPI.cpp  NetworkAPI.h  SinkHandleWidget.h
src/GUI/: VideoGui.cpp  VideoGui.h  VideoGui.ui  VideoGuiLauncher.cpp  VideoGuiLauncher.h  WindowCloseEventFilter.cpp  WindowCloseEventFilter.h
src/MediaProcessing/: AudioDecoder.cpp  AudioEncoder.h  CachedLocalStream.cpp  CachedLocalStream.h  Demux.h  EncodingProfile.h  FFMPEGTranscoder.cpp  FFMPEGTranscoder.h  Input.h  InputFile.cpp  InputFile.h  NetworkInput.cpp  NetworkInput.h  PlayerStateSlots.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoTranscoder.cpp  VideoTranscoder.h
src/Networking/: CachedStream.cpp  CachedStream.h  Device.h  DeviceDirectory.h  DeviceScan.h  NetworkDevice.cpp  NetworkDevice.h  NetworkDeviceDirectory.cpp  NetworkDeviceDirectory.h  NetworkDeviceScanner.cpp  NetworkDeviceScanner.h  NetworkSinkHandler.cpp  NetworkSinkHandler.h  NetworkSinkTcpServer.cpp  NetworkSinkTcpServer.h  SinkHandler.h  StreamInitThread.cpp  StreamInitThread.h  StreamThread.cpp  StreamThread.h  Streaming.h
test/: CMakeLists.txt  main.cpp
test/MediaProcessing/: CachedLocalStreamTest.cpp  CachedLocalStreamTest.h
test/Networking/: CachedStreamTest.cpp  CachedStreamTest.h
